Fix ejems 1 & 2 from parte_5